# lau-varadhan-transport

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: benamou_brenier.rs  cole_hopf.rs  gpu_dispatch.rs  gpu_schedule.rs  hbar_interpolation.rs  heat_kernel.rs  hopf_lax.rs  lib.rs  maslov.rs  spectral_transport.rs  tropical_attention.rs  varadhan.rs
