[package]
name = "lau-varadhan-transport"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-varadhan-transport"
description = "Varadhan's formula and Maslov dequantization: spectral theory through tropical geometry to optimal transport"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
approx = "0.5"
